Removed old nav style.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <link href="resources/css/index.css" type="text/css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,400;0,600;1,400;1,600&family=Jura:wght@400;600&display=swap"
-        rel="stylesheet">
-    <title>Morven Harrow - Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cambay:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
+    <title>Marina Harrow - Portfolio</title>
 </head>
 
 <header>
-    <h2>Morven Harrow</h2>
+    <h2><strong>Marina Harrow</strong></h2>
     <nav>
         <ul>
             <li><a href="">About</a></li>
@@ -32,10 +30,6 @@
 
     <main>
         
-        <div class="imagenav">
-            <p id="work">Scroll to:</p>
-            <a href="#one">1</a><a href="#two">2</a><a href="#three">3</a><a href="#four">4</a>
-        </div>
         <div class="portfolio">
             <section id="one">
                 <img src="../Portfolio_html/resources/images/portfolioimage1.jpg" />
