--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <header>
-    <h2><strong>Marina Harrow</strong></h2>
+    <h2 id="name"><strong>Marina Harrow</strong></h2>
     <nav>
         <ul>
             <li><a href="">About</a></li>
@@ -32,7 +32,7 @@
         
         <div class="portfolio">
             <section id="one">
-                <img src="../Portfolio_html/resources/images/portfolioimage1.jpg" />
+            <img src="../Portfolio_html/resources/images/portfolioimage1.jpg" />
             </section>
             <section id="two">
                 <img src="../Portfolio_html/resources/images/portfolioimage2.jpg" />
