Updated scrolling behavior.

--- a/index.html
+++ b/index.html
@@ -29,26 +29,28 @@
     <!--script src="/Portfolio_html/resources/js/script.js"></!--script-->
 
     <main>
-        
+
         <div class="portfolio">
-            <section id="one">
-            <img src="../Portfolio_html/resources/images/portfolioimage1.jpg" />
+            <section class="overlap" id="one">
+                <img src="../Portfolio_html/resources/images/portfolioimage1.jpg" />
             </section>
-            <section id="two">
+            <section class="overlap" id="two">
                 <img src="../Portfolio_html/resources/images/portfolioimage2.jpg" />
             </section>
-            <section id="three">
+            <section class="overlap" id="three">
                 <img src="../Portfolio_html/resources/images/portfolioimage3.jpg" />
             </section>
-            <section id="four">
+            <section class="overlap" id="four">
                 <img src="../Portfolio_html/resources/images/portfolioimage4.jpg" />
+            </section>
+            <section class="overlap" id="five">
+                <img src="../Portfolio_html/resources/images/portfolioimage5.jpg" />
             </section>
         </div>
         <div class="about"></div>
         <div class="contact"></div>
     </main>
-</body>
-
+    </body>
 
 <footer></footer>
 
