--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Marina Harrow - Portfolio</title>
 </head>
 
+
 <header>
     <h2 id="name"><strong>Marina Harrow</strong></h2>
     <nav>
@@ -32,7 +33,7 @@
 
         <div class="portfolio">
             <section class="overlap" id="one">
-                <img src="../Portfolio_html/resources/images/portfolioimage1.jpg" />
+                <img id="work" src="../Portfolio_html/resources/images/portfolioimage1.jpg" />
             </section>
             <section class="overlap" id="two">
                 <img src="../Portfolio_html/resources/images/portfolioimage2.jpg" />
