--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
 
 <body>
 
-    <!--script src="/Portfolio_html/resources/js/script.js"></!--script-->
+    <!--script src="/resources/js/script.js"></!--script-->
 
     <main>
 
         <div class="portfolio">
             <section class="overlap" id="one">
-                <img id="work" src="../Portfolio_html/resources/images/portfolioimage1.jpg" />
+                <img id="work" src="..resources/images/portfolioimage1.jpg" />
             </section>
             <section class="overlap" id="two">
-                <img src="../Portfolio_html/resources/images/portfolioimage2.jpg" />
+                <img src="../resources/images/portfolioimage2.jpg" />
             </section>
             <section class="overlap" id="three">
-                <img src="../Portfolio_html/resources/images/portfolioimage3.jpg" />
+                <img src="../resources/images/portfolioimage3.jpg" />
             </section>
             <section class="overlap" id="four">
-                <img src="../Portfolio_html/resources/images/portfolioimage4.jpg" />
+                <img src="../resources/images/portfolioimage4.jpg" />
             </section>
             <section class="overlap" id="five">
-                <img src="../Portfolio_html/resources/images/portfolioimage5.jpg" />
+                <img src="../resources/images/portfolioimage5.jpg" />
             </section>
         </div>
         <div class="about"></div>
