--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 
         <div class="portfolio">
             <section class="overlap" id="one">
-                <img id="work" src="..resources/images/portfolioimage1.jpg" />
+                <img id="work" src="./resources/images/portfolioimage1.jpg" />
             </section>
             <section class="overlap" id="two">
-                <img src="../resources/images/portfolioimage2.jpg" />
+                <img src="./resources/images/portfolioimage2.jpg" />
             </section>
             <section class="overlap" id="three">
-                <img src="../resources/images/portfolioimage3.jpg" />
+                <img src="./resources/images/portfolioimage3.jpg" />
             </section>
             <section class="overlap" id="four">
-                <img src="../resources/images/portfolioimage4.jpg" />
+                <img src="./resources/images/portfolioimage4.jpg" />
             </section>
             <section class="overlap" id="five">
-                <img src="../resources/images/portfolioimage5.jpg" />
+                <img src="./resources/images/portfolioimage5.jpg" />
             </section>
         </div>
         <div class="about"></div>
