--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <header>
     <h2 id="name"><strong>Marina Harrow</strong></h2>
-    <nav>
+    <!-- <nav>
         <ul>
-            <li><a href="">About</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#work">Work</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
 
         </ul>
-    </nav>
+    </nav> -->
 </header>
 
 <body>
